# trassForMarble

./: CMakeLists.txt  MapMarbleTrassa.cpp  MapMarbleTrassa.h  README.md  coordinateVectors.cpp  coordinateVectors.h  definitions.h  interaction2Database.cpp  interaction2Database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  orbit.cpp  orbit.h  perturbationsKA.cpp  perturbationsKA.h
cmake/: FindMarble.cmake
